# gpu-dead-node-detector

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md
docs/: PROJECT_STATUS.md
docs/progress/: 2026-01-18-project-init.md  gdnd-remaining-issues-2026-01-23.md
docs/reports/: gdnd-acceptance-review-2026-01-21.md  gdnd-rust-full-verification-2026-01-18.md  gdnd-rust-verification-2026-01-18.md
docs/reports/completed/: ascend-npu-support-2026-01-21.md  gdnd-rust-implementation-2026-01-18.md
docs/standards/: documentation-guide.md
docs/templates/: completed-template.md  progress-template.md  review-template.md
release/rust/gdnd/: build.sh
release/rust/gdnd/alerts/: gdnd-alerts.yaml
release/rust/gdnd/chart/: Chart.yaml  values.yaml
release/rust/gdnd/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  daemonset.yaml  networkpolicy.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
release/rust/gdnd/configs/: config.yaml
release/rust/gdnd/dashboards/: gdnd-overview.json
release/rust/gdnd/deploy/: Dockerfile  Dockerfile.ascend  configmap.yaml  daemonset.yaml
src/rust/gdnd/: Cargo.toml
src/rust/gdnd/configs/: config.yaml
src/rust/gdnd/deploy/: Dockerfile  daemonset.yaml  rbac.yaml
src/rust/gdnd/gdnd/: Cargo.toml
src/rust/gdnd/gdnd-core/: Cargo.toml
src/rust/gdnd/gdnd-core/src/: healing.rs  lib.rs  metrics.rs  scheduler.rs  state_machine.rs
src/rust/gdnd/gdnd-core/src/detection/: l1_passive.rs  l2_active.rs  l3_pcie.rs  mod.rs
src/rust/gdnd/gdnd-core/src/device/: ascend.rs  interface.rs  mock.rs  mod.rs  nvidia.rs
src/rust/gdnd/gdnd-k8s/: Cargo.toml
src/rust/gdnd/gdnd-k8s/src/: client.rs  lib.rs  node_ops.rs
src/rust/gdnd/gdnd/src/: cli.rs  config.rs  main.rs
src/rust/gdnd/gpu-check/: build.sh  gpu_check.cu
src/rust/gdnd/npu-check/: build.sh  npu_check.cpp
