[workspace]
resolver = "2"
members = ["gdnd", "gdnd-core", "gdnd-k8s"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GDND Team"]
license = "Apache-2.0"
repository = "https://github.com/example/gdnd"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# GPU libraries
nvml-wrapper = "0.10"

# Kubernetes
kube = { version = "0.87", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20", features = ["latest"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.1"

# Misc
regex = "1.10"
once_cell = "1.19"

# Internal crates
gdnd-core = { path = "gdnd-core" }
gdnd-k8s = { path = "gdnd-k8s" }
