[package]
name = "gdnd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core detection logic for GPU Dead Node Detector"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
nvml-wrapper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
