[package]
name = "gdnd-k8s"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Kubernetes integration for GPU Dead Node Detector"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

gdnd-core = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
