[package]
name = "gdnd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU Dead Node Detector - Kubernetes GPU health monitoring and fault isolation"

[[bin]]
name = "gdnd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
humantime-serde = { workspace = true }

gdnd-core = { workspace = true }
gdnd-k8s = { workspace = true }
